# ldap-sam-syncd

./: .dockerignore  .gitignore  Dockerfile  README.md  config.ini  pip-packages  pyproject.toml  runtests  setup.py
dev/: .env  config.ini  docker-compose.yml
src/: config.py  miscfuncs.py
tests/: t_config.py  t_miscfuncs.py
